# waspc

./: .gitignore  CMakeLists.txt  Readme.md  todo.txt
doc/: Notes.txt  Notes_reverse_eng1.txt  Notes_reverse_eng2.txt  Notes_reverse_eng3.txt  Notes_reverse_eng4.txt  Notes_reverse_eng5.txt  sample.py
doc/Memory/: notes.txt
doc/loader/: notes.txt
src/: CMakeLists.txt
src/driver/: CMakeLists.txt  config.h  driver.c
src/include/: leb128.h  vm.h
src/include/decoder/: wasm_decoder.h  wasm_loader.h
src/include/diagnostic/: diag.h  error.h
src/include/interpreter/: ctrl_frame.h  frame.h  interpreter.h  values.h  vm.h
src/include/loader/: wasm_loader.h  wasm_validator.h
src/include/memory/: alloc.h  arena.h  load_memory.h  memory.h  object_pool.h  work_memory.h
src/include/object/: bin_module.h  decoded_module.h  error.h  object.h  result.h  wasm_bin_module.h  wasm_module.h
src/include/objects/: decoded_module.h  error.h  export.h  function.h  global.h  module.h  object.h  wp_objects.h
src/include/runtime/: alloc.h  instances.h  interpreter.h  loader.h  runtime.h  store.h
src/include/utils/: hash.h  hash_table.h  leb128.h  names.h
src/include/validation/: wasm_decoder.h  wasm_validator.h
src/include/vm/: frame.h  values.h  vm.h
src/include/waspc/: frame.h  loader.h  module.h  runtime.h  values.h  vm.h  wasdef.h
src/include/webassembly/: bin.h  values.h
src/include/webassembly/binary/: instructions.h  module.h  opcode.h
src/include/webassembly/execution/: export_instance.h  function_instance.h  module_instance.h
src/include/webassembly/execution/runtime/: addresses.h  external_values.h  function_instance.h  instances.h  module_instance.h  values.h
src/include/webassembly/runtime/: export_instance.h  function_instance.h  global_instance.h  module_instance.h
src/include/webassembly/structure/: module.h  types.h
src/include/webassembly/types/: function_type.h  number_type.h  reference_type.h  types.h  value_type.h  vector_type.h
src/include/webassembly/validation/: contex.h
src/test/: CMakeLists.txt  wasm2header.py
src/test/runtime/: CMakeLists.txt  config_test.h  test_WpRuntime.cc
src/test/utils/: CMakeLists.txt  test_hash_table.cc  test_leb128.cc  test_leb128.cpp
src/test/validation/: CMakeLists.txt  config_test.h  test_wasm_decoder.cc  test_wasm_validator.cc
src/test/vm/: CMakeLists.txt  test_leb128.cpp  test_loader.cpp
src/test/wasm/: CMakeLists.txt  add.h  add.wat  sample1.wasm  samples.cc  samples.h  test1.h  test1.wasm  test1.wat  test2.wat
src/waspc/: CMakeLists.txt  eval.c  leb128.c  loader.c  vm.c
src/waspc/decoder/: CMakeLists.txt  wasm_decoder.c  wasm_loader.c
src/waspc/diagnostic/: CMakeLists.txt  error.c
src/waspc/instantiation/: allocator.c
src/waspc/interpreter/: CMakeLists.txt  eval.c  interpreter.c  stack.c
src/waspc/loader/: CMakeLists.txt  Readme.md  loader_old.c  wasm_decoder.c  wasm_instanciate.c  wasm_loader.c  wasm_validator.c
src/waspc/memory/: CMakeLists.txt  load_memory.c  memory.c  pool_object.c  work_memory.c
src/waspc/object/: CMakeLists.txt  bin_module.c  error.c  result.c  wasm_bin_module.c  wasm_module.c
src/waspc/objects/: CMakeLists.txt  decoded_module.c  error.c  function.c  global.c  module.c
src/waspc/runtime/: CMakeLists.txt  alloc.c  init_runtime.c  instances.c  loader.c  runtime.c  store.c
src/waspc/utils/: CMakeLists.txt  hash.c  hash_table.c  leb128.c  names.c
src/waspc/validation/: CMakeLists.txt  wasm_decoder.c  wasm_validator.c  wasm_validator_buffer.c  wasm_veval.c
src/waspc/validator/: wasm_validator.c
src/waspc/vm/: CMakeLists.txt  eval.c  instanciator.c  stack.c  vm.c
